@@ -118,6 +118,9 @@ Branch YARN-2928: Timeline Server Next Generation: Phase 1
     YARN-3908. Fixed bugs in HBaseTimelineWriterImpl. (Vrushali C and Sangjin
     Lee via zjshen)
 
+    YARN-3993. Changed to use the AM flag in ContainerContext determine AM
+    container in TestPerNodeTimelineCollectorsAuxService. (Sunil G via zjshen)
+
 Trunk - Unreleased
 
   INCOMPATIBLE CHANGES
